--- a/css/styles1.css
+++ b/css/styles1.css
@@ -65,13 +65,11 @@ img {
 	padding-right: 16px;
 	margin: 0 auto;
  }
- 
  @media screen and (min-width: 768px) {
 	.container {
 	  max-width: 768px;
 	}
  }
- 
  @media screen and (min-width: 1158px) {
 	.container {
 	  max-width: 1158px;
@@ -80,6 +78,7 @@ img {
 	  
 	}
  }
+
 .backdrop {
 	position: fixed;
 	top: 0;
@@ -103,7 +102,6 @@ img {
 	border-radius: 4px;
 	background: var(--modal-background);
 	box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-
 }
 .modal-close-btn {
 	position: absolute;
@@ -163,7 +161,6 @@ flex-wrap: wrap;
 text-align: center;
 justify-content: center;
 margin-bottom: 72px;
-
 }
 .btn {
 background-color: var(--background-lite);
@@ -179,7 +176,6 @@ padding: 12px 24px;
 border-radius: 4px;
 border: 1px solid var(--accent-color);
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-
 }
 .btn:hover,
 .btn:focus {
@@ -188,7 +184,6 @@ color: var(--white-background);
 border: 1px solid transparent ;
 box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
-
 .btn-adress {
 font-size: 16px;
 line-height: 1.5;
@@ -366,8 +361,121 @@ fill: var(--primary-blue);
 	cursor: pointer;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.mobile__button {
+	border: none;
+	background-color: transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	right: 15px;
+	cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .mobile__button {
+    display: none;
+  }
+}
+
+.mobile__button_open {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	width: 32px;
+	height: 22px;	
+}
+.mobile__button:hover .mobile__button_open,
+.mobile__button:focus .mobile__button_open {
+  fill: var(--pressed-blue);
+}
+.mobile__list {
+	color: var(--overlay-dark);
+}
+.mobile__item:not(:last-child) {
+	margin-bottom:40px;
+ }
+ 
+.mobile__header__nav {
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 1.11;
+	letter-spacing: 0.02em;
+}
+.mobile__current	{
+	color: var(--pressed-blue);
+}
 
 /* === HEADER ===  */
+.header-border {
+	border-bottom: 1px solid var(--accent-color);
+	box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.header-container {
+	display: flex;
+	align-items: center;
+}
+.web {
+color: var(--primary-blue);
+font-family: "Raleway",sans-serif;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+display: flex;
+align-items: center;
+margin-left: auto;
+margin-right: 76px;
+}
+.web-studio {
+color: var(--overlay-dark);
+}
+.header-navigation {
+	display: flex;
+	align-items: center;
+}
+.adress {
+	margin-left: auto;
+}
+.header-navigation-adress {
+	display: flex;
+	gap: 40px;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.header-navigation-list {
+	display: flex;
+	margin-left: auto;
+	gap: 40px;
+}
+
+.header-nav {
+	display: block;
+	padding: 24px 0;
+	color:var(--overlay-dark);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5; 
+	letter-spacing: 0.02em;
+	position: relative;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-nav:hover,
+.header-nav:focus {
+	color: var(--pressed-blue);
+}
+.navigation-list {
+	position: relative;
+}
+.current {
+	color: var(--pressed-blue);
+}
+.current::after {
+  content: "";
+  background-color: var(--pressed-blue);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  display: block;
+  position: absolute;
+  bottom: -1px;
+}
 	/* === BODY === */
 		/* === FOOTER === */
 		.footer {
@@ -388,6 +496,7 @@ fill: var(--primary-blue);
 				padding: 100px 0;
 			}
 		}
+
 		.footer-container {
 			align-items: baseline;
 		}
@@ -396,6 +505,7 @@ fill: var(--primary-blue);
 			display: flex;
 			}
 		}
+
 		.footer-tablet {
 			align-items: baseline;	
 		}
@@ -411,6 +521,7 @@ fill: var(--primary-blue);
 				display: flex;
 			}
 		}
+
 		@media screen and (max-width: 767px) {
 		.footer-studio-flex {
 			text-align: center;
@@ -426,6 +537,7 @@ fill: var(--primary-blue);
 			margin-right: 120px;
 			}
 		}
+
 		.web-footer {
 		color: var(--primary-blue);
 		font-family: "Raleway",sans-serif;
@@ -469,20 +581,21 @@ fill: var(--primary-blue);
 					margin-bottom: 72px;
 				}
 			}
+
 		.footer-social-media {
 				color: var(--white-background);
 				font-size: 16px;
 				font-weight: 500;
 				line-height: 1.5;
 				letter-spacing: 0.02em;
-				margin-bottom: 16px;
-				
+				margin-bottom: 16px;	
 		}
 		@media screen and (max-width: 767px) {
 			.footer-social-media {
 				text-align: center;
 			}
 		}
+
 		.footer-social-item {
 				width: 40px;
 				height: 40px;
@@ -503,8 +616,6 @@ fill: var(--primary-blue);
 			
 			.footer__email {
 				width: 398px;
-				
-				
 			}
 			@media screen and (min-width: 768px)  {
 				.footer__email {
@@ -519,6 +630,7 @@ fill: var(--primary-blue);
 					gap: 24px;
 				}
 			}
+
 			.footer__label {
 				text-align: center;
 				font-size: 16px;
@@ -533,6 +645,7 @@ fill: var(--primary-blue);
 					text-align: start;
 				}
 			}
+
 			.input {
 				display: block;
 				width: 100%;
@@ -547,7 +660,6 @@ fill: var(--primary-blue);
 				color: var(--white-background);
 				filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 				margin-bottom: 16px;
-		
 			}
 			@media screen and (min-width: 768px) {
 				.input {
@@ -556,6 +668,7 @@ fill: var(--primary-blue);
 				line-height: 1.5;
 				}
 			}
+
 			.label-btn {
 				display: flex;
 				justify-content: center;
@@ -591,6 +704,7 @@ fill: var(--primary-blue);
 					margin-left: 24px;
 				}
 			}
+
 			.label-btn-svg {
 				margin-left: 16px;
 				  fill: var(--white-background);
