--- a/css/styles1.css
+++ b/css/styles1.css
@@ -385,10 +385,56 @@ fill: var(--primary-blue);
 .mobile__button:focus .mobile__button_open {
   fill: var(--pressed-blue);
 }
+.mobile__modal {
+	position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  background-color: var(--white-background);
+  display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  overflow-y: auto;
+ 
+}
+.mobile__modal .is-hidden {
+	transform: translateX(0);
+	
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+ }
+ .mobile__modal .container {
+	padding-left: 40px;
+	padding-right: 35px;
+	display: flex;
+	flex-direction: column;
+	min-height: 796px;
+	height: 100%;
+ }
+ 
+ @media screen and (min-width: 768px) {
+	.mobile__modal {
+	  display: none;
+	}
+ }
+.mobile__contacts {
+	margin-bottom: 48px;
+}
 .mobile__list {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	color: var(--overlay-dark);
 }
-.mobile__item:not(:last-child) {
+.mobile__list:hover .mobile__header__nav,
+.mobile__list:focus .mobile__header__nav {
+	color: var(--pressed-blue);
+
+}
+.mobile__list:not(:last-child) {
 	margin-bottom:40px;
  }
  
@@ -398,18 +444,86 @@ fill: var(--primary-blue);
 	line-height: 1.11;
 	letter-spacing: 0.02em;
 }
+.mobile__header__nav:hover,
+.mobile__header__nav:focus {
+	color: var(--pressed-blue);
+}
 .mobile__current	{
 	color: var(--pressed-blue);
 }
-
+.mobile__bottom {
+	margin-top: auto;
+}
+.mobile__phone {
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 1.11;
+	letter-spacing: 0.02em;
+}
+.mobile__phone:hover,
+.mobile__phone:focus {
+	color: var(--pressed-blue);
+}
+.mobile__emailadress {
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 1.2;
+	letter-spacing: 0.02em;
+}
+.mobile__emailadress:hover,
+.mobile__emailadress:focus {
+	color: var(--pressed-blue);
+}
+.menu__svg {
+	position: absolute;
+    width: 33px;
+    height: 33px;
+    border: none;
+    background-color: var(--white-background); 
+    top: 24px;
+    right: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--accent-color);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu__close {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile__society {
+	display: flex;
+	gap: 56px;
+}
+.societ__item {
+	width: 40px;
+	height: 40px;
+}
+.svg-link:hover,
+.svg-link:focus {
+  background-color: var(--pressed-blue);
+}
 /* === HEADER ===  */
 .header-border {
 	border-bottom: 1px solid var(--accent-color);
 	box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+@media screen and (max-width:767px) {
+	.header-border {
+		padding-top: 24px;
+		padding-bottom: 24px;
+	}
+	
+}
+
 .header-container {
 	display: flex;
 	align-items: center;
+	position: relative;
 }
 .web {
 color: var(--primary-blue);
@@ -435,14 +549,27 @@ color: var(--overlay-dark);
 	margin-left: auto;
 }
 .header-navigation-adress {
-	display: flex;
-	gap: 40px;
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+	display: none;
+	
 }
+@media screen and (min-width:768px) {
+	.header-navigation-adress {
+		display: flex;
+		gap: 40px;
+		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+	}
+}
+
 .header-navigation-list {
-	display: flex;
-	margin-left: auto;
-	gap: 40px;
+	display: none;
+	position: relative;;
+}
+@media screen and (min-width:768px) {
+	.header-navigation-list {
+		display: flex;
+		margin-left: auto;
+		gap: 40px;
+	}
 }
 
 .header-nav {
