--- a/css/styles1.css
+++ b/css/styles1.css
@@ -555,6 +555,15 @@ color: var(--overlay-dark);
 @media screen and (min-width:768px) {
 	.header-navigation-adress {
 		display: flex;
+		flex-direction: column;
+		gap: 12px;
+		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+	}
+}
+@media screen and (min-width:1158px) {
+	.header-navigation-adress {
+		display: flex;
+		flex-direction: row;
 		gap: 40px;
 		transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 	}
@@ -571,6 +580,7 @@ color: var(--overlay-dark);
 		gap: 40px;
 	}
 }
+
 
 .header-nav {
 	display: block;
@@ -752,11 +762,7 @@ color: var(--overlay-dark);
 					text-align: center;
 				}
 			}
-			@media screen and (min-width: 1158px)  {
-				.footer__email {
-					gap: 24px;
-				}
-			}
+		
 
 			.footer__label {
 				text-align: center;
