--- a/css/styles1.css
+++ b/css/styles1.css
@@ -740,14 +740,28 @@ url(../images/heero-pc-1x.jpg);
 	@media screen and (min-width:768px) {
 		.rules-main-list {
 			display: flex;
-			gap: 24px;
+			flex-wrap: wrap;
+			gap: 72px 24px;
 		}
 		
 	}
+	@media screen and (min-width:1158px) {
+		.rules-main-list {
+		}
+		
+	}
+	@media screen and (max-width:767px) {
 	.rules-list:not(:last-child) {
 		margin-bottom: 72px;
 	}
+}
 	@media screen and (min-width:768px) {
+	.rules-list {
+		margin-bottom: 0;
+		width: calc(100% / 2 - 24px);
+	}
+}
+@media screen and (min-width:1158px) {
 	.rules-list {
 		width: calc((100% - 3*24px)/4);
 	}
@@ -789,6 +803,7 @@ url(../images/heero-pc-1x.jpg);
 			line-height: 1.2;
 			letter-spacing: 0.02em;
 			margin-bottom: 8px;
+			text-align: left;
 		}
 		
 	}
