--- a/css/styles1.css
+++ b/css/styles1.css
@@ -820,6 +820,81 @@ url(../images/heero-pc-1x.jpg);
 			}
 			
 		}
+		/* === CUSTOMERS === */
+		.customers {
+			text-align: center;
+			margin-bottom: 72px;
+			font-weight: 700;
+		  font-size: 36px;
+		  line-height: 1.11;
+		  letter-spacing: 0.02em;
+		  color: var(--hero-background);
+		}
+		.customers-list {
+		
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			gap: 72px 16px;
+			transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			width: 100%;
+		}
+		@media screen and (min-width:768px) {
+			.customers-list {
+				gap: 72px 24px;
+			}
+		}
+		@media screen and (min-width:1158px) {
+			.customers-list {
+				gap: 72px 24px;
+			}
+		}
+		.customers-item {
+			flex-basis: calc(100% / 2 - 16px);
+			height: 88px;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: 110px 56px;
+		
+		}
+		@media screen and (min-width:768px) {
+			.customers-item {
+				flex-basis: calc(100% / 3 - 78px);
+				background-size: 104px 56px;
+			}
+			
+		}
+		@media screen and (min-width:1158px) {
+			.customers-item {
+				background-size: 104px 56px;
+			}
+			
+		}
+		.customers-link-svg {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			color: var(--secondary-text);
+			border: 1px solid var(--secondary-text);
+			border-radius: 4px;
+			transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+		}
+		.customers-svg {
+			fill: currentColor;
+			transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		}
+		.customers-link-svg:hover,
+		.customers-link-svg:focus {
+			color: var(--pressed-blue);
+			border-color: var(--pressed-blue);
+		}
+		.customers-link-svg:hover .customers-svg,
+		.customers-link-svg:focus .customers-svg {
+			fill: var(--pressed-blue);
+		}
 		/* === FOOTER === */
 		.footer {
 		background-color: #2E2F42;
