--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ img {
 	display: block;
 	max-width: 100%;
 	height: auto;
+	
 }
 /* === COMPONENT STYLES === */
 .container {
@@ -820,7 +821,102 @@ url(../images/heero-pc-1x.jpg);
 			}
 			
 		}
+		/* === TEAM SECTION === */
+		.team {
+			background-color: var(--background-lite);
+		}
+		.team-our {
+			font-size: 36px;
+			line-height: 1.11;
+			text-align: center;
+			font-weight: 700;
+			letter-spacing: 0.02em;
+			text-transform: capitalize;
+			color: var(--overlay-dark);
+			margin-bottom: 72px;
+		}
+
+		.team-mainlist {
+		}
+		@media screen and (min-width:768px) {
+			.team-mainlist {
+				display: flex;
+				flex-wrap: wrap;
+				gap:64px 24px;
+			}
+		}
+		@media screen and (min-width:1158px) {
+			.team-mainlist {
+				gap: 24px;
+			}
+		}
+
+		.team-list {
+			background-color: var(--white-background);
+			color: var(--box-shadow);
+			border-radius: 0px 0px 4px 4px;
+			box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+		}
+		.team-list:not(:last-child) {
+			margin-bottom: 72px;
+		}
+		@media screen and (min-width:768px) {
+			.team-list {
+				width: calc(100% / 2 - 24px);
+			}
+			
+		}
+		@media screen and (min-width:1158px) {
+			.team-list {
+				width: calc((100% - 3*24px)/4);
+			}
+			
+		}
+		.container-team {
+			padding: 32px 0px;
+		}
+		@media screen and (min-width:768px) {
+			.container-team {
+
+			}
+		}
+		@media screen and (min-width:1158px) {
+			.container-team {
+				padding: 32px 0;
+			}
+		}
+		.team-names {
+			color: var(--hero-background);
+			font-size: 20px;
+			font-weight: 500;
+			line-height: 1.2;
+			letter-spacing: 0.02em;
+			text-align: center;
+			margin-bottom: 8px;
+		}
+		.team-professions {
+			font-size: 16px;
+			font-weight: 400;
+			line-height: 1.5;
+			letter-spacing: 0.02em;
+			text-align: center;
+			margin-bottom: 8px;
+		}
+		.social-list {
+			display: flex;
+			justify-content: center;
+			gap: 24px;
+		}
+		.social-item {
+			width: 40px;
+			height: 40px;	
+		}
+	
 		/* === CUSTOMERS === */
+		.customers-container {
+			padding-left: 8px;
+			padding-right: 8px;
+		}
 		.customers {
 			text-align: center;
 			margin-bottom: 72px;
@@ -848,6 +944,7 @@ url(../images/heero-pc-1x.jpg);
 		@media screen and (min-width:1158px) {
 			.customers-list {
 				gap: 72px 24px;
+				flex-wrap: nowrap;
 			}
 		}
 		.customers-item {
