--- a/css/styles.css
+++ b/css/styles.css
@@ -858,7 +858,7 @@ url(../images/heero-pc-1x.jpg);
 			box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 		}
 		.team-list:not(:last-child) {
-			margin-bottom: 72px;
+			
 		}
 		@media screen and (min-width:768px) {
 			.team-list {
@@ -869,6 +869,7 @@ url(../images/heero-pc-1x.jpg);
 		@media screen and (min-width:1158px) {
 			.team-list {
 				width: calc((100% - 3*24px)/4);
+				margin-bottom: -72px;
 			}
 			
 		}
@@ -1223,4 +1224,75 @@ url(../images/heero-pc-1x.jpg);
 			.label-btn:hover,
 			.label-btn:focus {
 				background-color: var(--pressed-blue);
+			}
+			/* === PORTFOLIO === */
+			.section-portfolio-btn {
+				padding: 96px 0 120px 0;
+			}
+			.portfolio-btn {
+				display: flex;
+				gap: 24px;
+				flex-wrap: wrap;
+			text-align: center;
+			justify-content: center;
+				margin-bottom: 72px;
+				
+			}
+			.portfolio-list{
+				display: flex;
+				flex-wrap: wrap;
+				gap: 48px 24px;
+			}
+			.portfolio-item-list {
+				display: block;
+				background-color: var(--white-background);
+				width: calc((100% - 48px) / 3);
+				border: 1px solid var(--accent-color);
+			}
+			.portfolio-item-list:hover,
+			.portfolio-item-list:focus {
+				box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+			
+			}
+			.portfolio-link {
+				display: block;
+				transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+			}
+			.portfolio-link:hover,
+			.portfolio-link:focus {
+				box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+			}
+			.overlay {
+				display: block;
+				position: relative;
+				overflow: hidden;
+			}
+			.overlay-text{
+				position: absolute;
+				opacity: 1;
+				width: 100%;
+				height: 100%;
+				padding: 40px 32px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				color: var(--background-lite);
+				background-color: var(--primary-blue);
+				top: 0;
+				left: 0;
+				transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+				transform: translateY(100%);
+				font-family: Roboto;
+				font-size: 16px;
+				line-height: 1.5;
+				letter-spacing: 0.02em;
+			}
+			.portfolio-item-list:hover .overlay-text,
+			.link:focus .overlay-text {
+				transform: translateY(0);
+			 }
+			.portfolio-container {
+				padding: 32px 16px;
+				border: 1px solid var(--accent-color);
+				border-top: none;
 			}
