--- a/css/styles.css
+++ b/css/styles.css
@@ -92,17 +92,27 @@ img {
 	  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 .modal {
+	width: 95%;
+	max-width: 392px;
+	height: 95%;
+	max-height: 584px;
+	overflow: scroll;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	padding: 72px 24px 24px 24px;
 	transform: translate(-50%, -50%) scale(1);
-	  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	width: 408px;
-	min-height: 584px;
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border-radius: 4px;
 	background: var(--modal-background);
 	box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+@media screen and (min-width:768px) {
+	.modal {
+		width: 100%;
+		height: 100%;
+		max-width: 408px;
+	}
 }
 .modal-close-btn {
 	position: absolute;
@@ -194,6 +204,16 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-adress:hover,
 .btn-adress:focus {
+color: var(--pressed-blue);
+}
+.btn-adress-nav {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.btn-adress-nav:hover,
+.btn-adress-nav:focus {
 color: var(--pressed-blue);
 }
 .list {
@@ -393,8 +413,7 @@ fill: var(--primary-blue);
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding-top: 80px;
-  padding-bottom: 40px;
+  padding: 80px 35px 40px 40px;
   background-color: var(--white-background);
   display: flex;
 	flex-direction: column;
@@ -404,7 +423,6 @@ fill: var(--primary-blue);
 }
 .mobile__modal .is-hidden {
 	transform: translateX(0);
-	
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
@@ -488,9 +506,10 @@ fill: var(--primary-blue);
     align-items: center;
     width: 24px;
     height: 24px;
-    background-color: var(--accent-color);
     padding: 0;
     cursor: pointer;
+	 border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu__close {
@@ -619,7 +638,6 @@ color: var(--overlay-dark);
 	.heero {
 	padding: 112px 0;
 	margin: 0 auto;
-	display: flex;
 	max-width: 767px;
 	border-color: rgba(46, 47, 66, 0.70);
 	background-image: linear-gradient(
@@ -663,7 +681,9 @@ url(../images/heero-mobile-1x.jpg);
 	}
 	@media screen and (min-width:1158px) {
 		.heero {
-			max-width: 100%;
+			padding: 188px 0;
+			height: 600px;
+			max-width: 1440px;
 			background-image: linear-gradient(
       rgba(46, 47, 66, 0.70),
       rgba(46, 47, 66, 0.70)
@@ -797,6 +817,10 @@ url(../images/heero-pc-1x.jpg);
 		margin-bottom: 8px;
 		text-align: center;
 		}
+		@media screen and (min-width:768px ) {
+			.description-main {
+			text-align: left	;
+			}}
 	@media screen and (min-width:1158px ) {
 		.description-main {
 			font-size: 20px;
@@ -906,6 +930,14 @@ url(../images/heero-pc-1x.jpg);
 		}
 	
 		/* === CUSTOMERS === */
+		.customers-container {
+			padding-bottom: 96px;
+		}
+		@media screen and (min-width:1158px) {
+			.customers-container {
+			padding-bottom: 120px;
+		}
+	}
 		.customers {
 			text-align: center;
 			margin-bottom: 72px;
@@ -1005,6 +1037,7 @@ url(../images/heero-pc-1x.jpg);
 			display: flex;
 			gap: 24px;
 			justify-content: space-around;
+			margin-bottom: 72px;
 		}
 		}
 		@media screen and (min-width: 1158px) { 
@@ -1016,6 +1049,7 @@ url(../images/heero-pc-1x.jpg);
 		@media screen and (max-width: 767px) {
 		.footer-studio-flex {
 			text-align: center;
+			margin-bottom: 72px;
 		}
 	}
 		@media screen and (min-width: 768px) {
@@ -1052,7 +1086,6 @@ url(../images/heero-pc-1x.jpg);
 				letter-spacing: 0.02em;
 				max-width: 268px;
 				margin:0 auto;
-				margin-bottom: 72px;
 				text-align: start;
 				
 		}
